--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     align-items: center;
     background:var(--color-black);
+    position: fixed;
+    z-index: 5;
 
     padding: 1rem 2rem;
 }
@@ -23,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 55px;
 
     list-style: none;
 }
