--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -71,14 +71,16 @@
     }
 }
 @media screen and (max-width:650px){
+
+    .app__aboutus-overlay img {
+        width: 80%;
+        height: 320px;
+    }
+
     .app__aboutus-content_about, .app__aboutus-content_history {
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
-    }
-    .app__aboutus-overlay {
-        width: 80%;
-        height: 320px;
     }
 }
